exports[`Server default snapshot 1`] = `
<Component
  running={true}
  serverDetails={
    Object {
      "id": "some id",
      "name": "some id",
      "port": 3000,
      "queue": "some queue id",
      "type": "some type",
    }
  } />
`;

exports[`ServerInspect default snapshot 1`] = `
<div
  className="server-inspect">
  <header
    className="server-inspect__header">
    some id
  </header>
  <main
    className="server-inspect-main server-inspect__main">
    <div
      className="server-inspect-details">
      <div
        className="server-inspect-details__row">
        <Connect(Component) />
      </div>
      <div
        className="server-inspect-details__row">
        <div
          className="server-inspect-details__cell">
          Port: 
          3000
        </div>
        <div
          className="server-inspect-details__cell">
          Type: 
          some type
        </div>
      </div>
      <div
        className="server-inspect-details__row">
        <div
          className="server-inspect-details__cell">
          <Link
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/add-task">
            Add task
          </Link>
        </div>
      </div>
      <div
        className="server-inspect-details__row">
        <div
          className="server-inspect-details__cell">
          Add from file: 
          <Connect(FilePicker)
            serverId="some id" />
        </div>
      </div>
    </div>
    <div
      className="server-inspect-queue">
      <Component
        id="some id" />
    </div>
  </main>
</div>
`;

exports[`ServerPlaceholder any servers exists snapshot 1`] = `
<div
  className="server-placeholder">
  Add server
</div>
`;

exports[`ServerPlaceholder some servers exist snapshot 1`] = `
<div
  className="server-placeholder">
  Select server
</div>
`;
